# elrs_otg

./: .gitignore  CMakeLists.txt  DRIVER_INTEGRATION.md  FTXUI_MIGRATION_SUMMARY.md  GUIDE_COMPLIANCE.md  NEW_FLOW_DESIGN.md  README.md  build.ps1  demo.ps1  demo_flow.ps1  main.cpp  monitor_demo.ps1  run.ps1  setup_libusb.ps1  test_commands.bat  test_commands.ps1  test_driver.bat  test_driver.ps1  test_enhanced_detection.ps1  workflow.ps1
docs/: spectrum_investigation.md
include/: crsf_protocol.h  device_registry.h  driver_installer.h  elrs_transmitter.h  ftxui_manager.h  log_manager.h  msp_commands.h  radio_state.h  screen_base.h  screen_manager.h  serial_bridge.h  telemetry_handler.h  tui_manager.h  usb_bridge.h
include/screens/: bind_screen.h  config_screen.h  export_screen.h  graphs_screen.h  log_screen.h  main_screen.h  monitor_screen.h  rxtest_screen.h  settings_screen.h  simple_screens.h  simple_screens_new.h  txtest_screen.h  update_screen.h
lib/: libusb_stub.cpp
lib/libusb-1.0/: libusb.h
samples/: elrs_otg_demo_single.cpp
src/: crsf_protocol.cpp  device_registry.cpp  driver_installer.cpp  elrs_transmitter.cpp  ftxui_manager.cpp  log_manager.cpp  msp_commands.cpp  radio_state.cpp  screen_base.cpp  screen_manager.cpp  serial_bridge.cpp  telemetry_handler.cpp  tui_manager.cpp  usb_bridge.cpp
src/screens/: bind_screen.cpp  config_screen.cpp  export_screen.cpp  graphs_screen.cpp  log_screen.cpp  main_screen.cpp  monitor_screen.cpp  rxtest_screen.cpp  settings_screen.cpp  txtest_screen.cpp  update_screen.cpp
